<resources>
    <string name="app_name">Gestion du parc vert de Lille 1</string>
    <string name="app_name_short">Gestion Parc</string>
    <string name="ajouter">Ajouter</string>
    <string name="rechercher">Rechercher</string>
    <string name="acceuil">acceuil</string>
    <string name="save">Sauvegarder</string>
    <string name="problems_to_solve">problèmes à résoudre</string>
    <string name="message_welcome">Bienvenue sur l\'application de gestion des tâches d\'entretien du parc vert de Lille 1</string>
    <string name="logo_parc_lille">logo parc lille</string>
    <string name="see_tasks">Voir les tâches</string>
    <string name="add_task">Ajouter une tâche</string>
    <string name="add_fixtures">Ajouter données</string>
    <string name="delete_all">Tout supprimer</string>
    <string name="adding_fixtures">Ajout de 5 tâches.</string>
    <string name="deleting_tasks">Suppression des tâches.</string>
    <string name="no_adress_found">Impossible de trouver une adresse.</string>
    <string name="add_new_task">Ajouter une nouvelle tâche</string>
    <string name="location">location</string>
    <string name="description">Description</string>
    <string name="address">Adresse</string>
    <string name="fields_missing">La localisation est requise pour ajouter une tâche.</string>
    <string-array name="issue_type_array">
        <item>Arbre à tailler</item>
        <item>Arbre à abattre</item>
        <item>Haie à tailler</item>
        <item>Détritus</item>
        <item>Mauvaise herbe</item>
        <item>Autre</item>
    </string-array>
    <string name="viewOnGmap">Voir sur Maps</string>
    <string name="delete">Supprimer</string>
    <string name="deleting_task">Tâche supprimée</string>
    <string name="no_problem">Aucun problème ! :)</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDg74wM2x2MEU5qAO_qBLIz6r3-c3sTboU</string>
    <string name="loc_required">La géolocalisation est requise pour que l\'application fonctionne correctement.</string>
</resources>
